--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 CMakeLists.txt.user*
-build/Desktop-Debug/*
+build/Desktop-Debug/**
 !build/Desktop-Debug/estaciones.csv
 !build/Desktop-Debug/patinetes.csv
 !build/Desktop-Debug/out.csv
