añadido .csv's para la sesión 9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,12 @@ add_executable(ProyectoEDI-JJJ main.cpp
     sistema.h sistema.cpp
     build/Desktop-Debug/patinetes.csv build/Desktop-Debug/estaciones.csv
     pruebas/PruebaSistema.h
-    pruebas/PruebaSistema.cpp)
+    pruebas/PruebaSistema.cpp
+    .gitignore
+    build/Desktop-Debug/alquilerPatinetes.csv
+    build/Desktop-Debug/distribucionPatinetes.csv
+    ProgPrincipal.cpp
+)
 
 include(GNUInstallDirs)
 install(TARGETS ProyectoEDI-JJJ
