--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ build/Desktop-Debug/**
 !build/Desktop-Debug/patinetes.csv
 !build/Desktop-Debug/out.csv
 !build/Desktop-Debug/usuarios.csv
+!build/Desktop-Debug/alquilerPatinetes.csv
+!build/Desktop-Debug/distribucionPatinetes.csv
