--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 #archivos en el directorio build/Desktop-Debug/ también tendrán que ser añadidos al .gitignore
-add_executable(ProyectoEDI-JJJ main.cpp
+add_executable(ProyectoEDI-JJJ main.cpp.backup
     Usuario.h Usuario.cpp
     cuentabancaria.h cuentabancaria.cpp    
     patinete.h patinete.cpp
