--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ project(ProyectoEDI-JJJ LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+#flags precompilación: descomenta las que quieras activar
+add_compile_definitions(ARBOLYPUBLICADOS)
+#add_compile_definitions(LISTA)
+
 #archivos en el directorio build/Desktop-Debug/ también tendrán que ser añadidos al .gitignore
 add_executable(ProyectoEDI-JJJ main.cpp.backup
     Usuario.h Usuario.cpp
